# Image-Change-Detection-with-C2VA

./: .gitignore  C2VA.py  README.md  pyproject.toml  requirements.txt
c2va/: C2VA.py  main.py
